--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "gitq-biu",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "git biubiubiu",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "push": "npm publish"
   },
   "author": "Evan.G",
   "license": "ISC",
